testdata/baselines/reference/compiler/nestedSpreadsAndWidening.errors.txt
nestedSpreadsAndWidening(4,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(4,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(4,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(5,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(5,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(5,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(6,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(6,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(6,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(7,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(7,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(7,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(8,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(8,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(8,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(9,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(9,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(9,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(10,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(10,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(10,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(11,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(11,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(11,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(12,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(12,11): error TS1005: ';' expected.
nestedSpreadsAndWidening(12,11): error TS1003: Identifier expected.
nestedSpreadsAndWidening(13,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(13,12): error TS1005: ';' expected.
nestedSpreadsAndWidening(13,12): error TS1003: Identifier expected.
nestedSpreadsAndWidening(14,1): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(14,12): error TS1003: Identifier expected.
nestedSpreadsAndWidening(14,12): error TS1005: ';' expected.
nestedSpreadsAndWidening(14,24): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(14,24): error TS1005: ';' expected.
nestedSpreadsAndWidening(14,24): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(14,24): error TS1005: '}' expected.
nestedSpreadsAndWidening(14,24): error TS1128: Declaration or statement expected.
nestedSpreadsAndWidening(14,24): error TS1005: '}' expected.

==== nestedSpreadsAndWidening (39 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/2551
    
    type S1 = { input: { a: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1005: ';' expected.
              ~
!!! error TS1003: Identifier expected.
    type S2 = { input: { b: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: ';' expected.
    type S3 = { input: { c: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: ';' expected.
    type S4 = { input: { d: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1005: ';' expected.
              ~
!!! error TS1003: Identifier expected.
    type S5 = { input: { e: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1005: ';' expected.
              ~
!!! error TS1003: Identifier expected.
    type S6 = { input: { f: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: ';' expected.
    type S7 = { input: { g: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: ';' expected.
    type S8 = { input: { h: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: ';' expected.
    type S9 = { input: { i: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
              ~
!!! error TS1005: ';' expected.
              ~
!!! error TS1003: Identifier expected.
    type S10 = { input: { j: number } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
               ~
!!! error TS1005: ';' expected.
               ~
!!! error TS1003: Identifier expected.
    type S11 = { input: { k?: string[] } };
    ~~~~
!!! error TS1128: Declaration or statement expected.
               ~
!!! error TS1003: Identifier expected.
               ~
!!! error TS1005: ';' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: ';' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: '}' expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                           ~
!!! error TS1005: '}' expected.
    
    type Base = { type: string; settings: S1 | S2 | S3 | S4 | S5 | S6 | S7 | S8 | S9 | S10 | S11; };
    
    type Action =
      | Base & { type: '1'; settings: S1 }
      | Base & { type: '2'; settings: S2 }
      | Base & { type: '3'; settings: S3 }
      | Base & { type: '4'; settings: S4 }
      | Base & { type: '5'; settings: S5 }
      | Base & { type: '6'; settings: S6 }
      | Base & { type: '7'; settings: S7 }
      | Base & { type: '8'; settings: S8 }
      | Base & { type: '9'; settings: S9 }
      | Base & { type: '10'; settings: S10 }
      | Base & { type: '11'; settings: S11 };
    
    declare function read<T>(arg: T): void;
    declare const step: Action;
    
    read({
      ...step,
      settings: { ...step.settings, input: { ...step.settings.input, k: ['5'] } },
    });
    
